--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="shadow">#C3D6AC</color>
     <color name="colorAccent">#C3D6AC</color>
     <color name="colorProfile">#FFF8BA</color>
+    <color name="gettingStarted">#FDE67A</color>
 
 
 
