--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,9 @@
         android:id="@+id/ftSignup"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="48dp"
         android:background="@drawable/layout_round_bg"
         android:clickable="true"
         android:focusable="true"
