--- a/app/src/main/res/layout/explore_card_design.xml
+++ b/app/src/main/res/layout/explore_card_design.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="140dp"
     android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -32,31 +33,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/video_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="Title"
-            android:textColor="@color/white"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:background="@drawable/drawable_gradient"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            app:layout_constraintBottom_toTopOf="@+id/video_description"
-            app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/video_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Title"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
 
-        <TextView
-            android:id="@+id/video_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="Description"
-            android:textColor="#DCCECE"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+                />
+
+            <TextView
+                android:id="@+id/video_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="Description"
+                android:textColor="#DCCECE"
+                android:textSize="12sp" />
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
